# InfoMerge

./: .env.example  .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-04-17-industry-vitality-plan.md
docs/superpowers/specs/: 2026-04-17-industry-vitality-design.md
src/: config.py  database.py  main.py  models.py  services.py
src/analysis/: discoverer.py  engine.py  llm_provider.py  store.py
src/api/: channels.py  search.py  vitality.py
src/channels/: base.py  models.py  registry.py
src/channels/plugins/tavily/: __init__.py  channel.py
src/channels/plugins/webhook/: __init__.py  channel.py
tests/: conftest.py  test_e2e.py  test_search.py  test_vitality_api.py
tests/test_analysis/: test_engine.py  test_llm_provider.py  test_store.py
tests/test_channels/: test_models.py  test_registry.py  test_tavily.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  DESIGN.md  api.ts
web/src/pages/: ChannelsPage.tsx  SearchPage.tsx  VitalityPage.tsx
